arc_evals/app/assets/style.css
.modal-xl {
    --bs-modal-width: 95%;
}

.task-card-link {
    cursor: pointer;
}

.eval {
    border-style: solid;
    border: solid 1px black;
    outline: solid 3px black;
    height: 16px;
    width: 16px;
}

.eval.fail {
    outline-color: #C00;
}

.eval.bad {
    outline-color: #C50;
}

.eval.okay {
    outline-color: #CC0;
}

.eval.good {
    outline-color: #8C0;
}

.eval.perf {
    outline-color: #0C0;
}


.symbol_0 {
    background-color: #000;
}

.symbol_1 {
    background-color: #0074D9;
    /* blue */
}

.symbol_2 {
    background-color: #FF4136;
    /* red */
}

.symbol_3 {
    background-color: #2ECC40;
    /* green */
}

.symbol_4 {
    background-color: #FFDC00;
    /* yellow */
}

.symbol_5 {
    background-color: #AAAAAA;
    /* grey */
}

.symbol_6 {
    background-color: #F012BE;
    /* fuschia */
}

.symbol_7 {
    background-color: #FF851B;
    /* orange */
}

.symbol_8 {
    background-color: #7FDBFF;
    /* teal */
}

.symbol_9 {
    background-color: #870C25;
    /* brown */
}

